--- a/views/transactions/all_expenses.handlebars
+++ b/views/transactions/all_expenses.handlebars
@@ -18,6 +18,8 @@
             <a href="/income/addIncome">Click Here To Add Income</a>
             <a>or</a>
             <a href="/income/showAllIncome">Click Here To View Income</a>
+            <a>or</a>
+            <a href="/bankac/addBankAC">Click Here To Add Accounts</a>
         </div>
         
         <div id="expenses-card" class="card">
