--- a/views/transactions/add_income.handlebars
+++ b/views/transactions/add_income.handlebars
@@ -67,6 +67,11 @@
                                        <input type="text" name="description" class="form-control" placeholder="Description"/>
                                 </div>
 
+                                 {{!-- <div id="field-container" class="input-group">
+                                        <span class="input-group-addon"><i class="material-icons">description</i></span>
+                                       <input type="hidden" value = "chase" name="Selected_bank" class="form-control" placeholder="Description"/>
+                                </div> --}}
+
        
 
 
@@ -75,15 +80,20 @@
                                     
                                         
                                         <div class="btn-group">
-                                                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <button onclick="myFunction()" id= "bank_button"type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                   Choose Your bank account
                                                 </button>
                                                 <div class="dropdown-menu">
-                                                  <a class="dropdown-item" href="#">Chase</a>
+                                                  {{!-- <a class="dropdown-item" href="#">Chase</a>
                                                   <a class="dropdown-item" href="#">Cash</a>
-                                                  <a class="dropdown-item" href="#">Forex card</a>
+                                                  <a class="dropdown-item" href="#">Forex card</a> --}}
+
+                                                      {{#each bank_accounts }}
+                                                        <a id= "select_bank" value='{{selected_account}}' class="dropdown-item" href="#">{{ac_name}}</a>
+                                                      {{/each }}
             
                                                 </div>
+                                              
                                         </div>
                                    
                                 </div>
@@ -146,6 +156,7 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/js/bootstrap-material-design.js" integrity="sha384-3xciOSDAlaXneEmyOo0ME/2grfpqzhhTcM4cE32Ce9+8DW/04AGoTACzQpphYGYe" crossorigin="anonymous"></script>
+        <script src="/public/js/add_income.js"></script>
         <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
         
 
