--- a/views/transactions/view_expense.handlebars
+++ b/views/transactions/view_expense.handlebars
@@ -66,7 +66,7 @@
                             <tr><td>Bank Account</td></tr>
                                 <tr>
                                     <td><i class="material-icons">account_balance_wallet</i></td>
-                                    <td>{{ expense.account.account_name }}</td>
+                                    <td>{{ expense.bank_account.ac_name }}</td>
                                 </tr>
 
                             <tr><td>Date</td></tr>
