--- a/views/transactions/add_expense.handlebars
+++ b/views/transactions/add_expense.handlebars
@@ -43,19 +43,27 @@
                           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                             -->
 
-                          <form action="/expenses/saveNewExpense" method="POST"> 
+                          <form action="/expenses/saveNewExpense" id="needs-validation" method="POST" novalidate> 
                                 <!-- <div class="form-group">
                                         <span class="input-group-addon">$</span>
                                         <input type="text" class="form-control" id="expense-amount" placeholder="Enter Amount">
                                 </div> -->
                                 <div id="field-container" class="input-group">
                                         <span class="input-group-addon"><i id = "field-icon" class="material-icons">monetization_on</i></span>
-                                        <input type="text" name="amount" class="form-control" placeholder="Enter amount"/>
+                                        <input type="number" step="0.01" name="amount" class="form-control" placeholder="Enter amount" required/>
+                                         <div class="invalid-feedback">
+                                                Please provide a valid amount
+                                        </div>
+                                       
                                 </div>
+                               
 
                                 <div id="field-container" class="input-group">
                                         <span class="input-group-addon"><i class="material-icons">description</i></span>
-                                       <input type="text" name="description" class="form-control" placeholder="Description"/>
+                                       <input type="text" name="description" class="form-control" placeholder="Description" required/>
+                                       <div class="invalid-feedback">
+                                                Please provide a valid description
+                                        </div>
                                 </div>
 
                                 <div id="field-container" class="input-group">
@@ -192,6 +200,23 @@
         <script>$(document).ready(function() { $('body').bootstrapMaterialDesign()});</script>
         <script src="/public/js/add_category.js"></script>
 
+
+        <script>
+                // Example starter JavaScript for disabling form submissions if there are invalid fields
+                (function() {
+                "use strict";
+                window.addEventListener("load", function() {
+                var form = document.getElementById("needs-validation");
+                form.addEventListener("submit", function(event) {
+                if (form.checkValidity() == false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                }
+                form.classList.add("was-validated");
+                }, false);
+                }, false);
+                }());
+        </script>
        
     </body>
 
