--- a/views/transactions/add_expense.handlebars
+++ b/views/transactions/add_expense.handlebars
@@ -2,29 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+         {{!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> --}}
         <link rel="stylesheet" href="/public/css/add_expense.css">
 
         
-        {{!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> --}}
-        <script src = "https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-        
-
-
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-        
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
-        <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/css/bootstrap-material-design.min.css" integrity="sha384-R80DC0KVBO4GSTw+wZ5x2zn2pu4POSErBkf8/fSFhPXHxvHJydT0CSgAP2Yo2r4I" crossorigin="anonymous">
-
-        <!--
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
-        -->
-
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
         
         <title>Add New Expense</title>
     </head>
@@ -66,72 +47,59 @@
                                         </div>
                                 </div>
 
-                                <div id="field-container" class="input-group">
-                                        <span class="input-group-addon"><i id="icon-category" class="material-icons">loyalty</i></span>
+                                <table>
+                                        <tr>
+                                                <td>
+                                                        <div id="field-container" class="input-group">
+                                                                <span class="input-group-addon"><i id="icon-category" class="material-icons">loyalty</i></span>
+                                                        
+                                                                <input id="selected_category" name = "selected_category" type="text" class="form-control" hidden="true">
+
+                                                                <div class="btn-group">
+                                                                        <button id="btn-category"  type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                                        Choose Your Category
+                                                                        </button>
+                                                                        <div class="dropdown-menu" id = "category">
+                                                                        {{#each categories}}
+                                                                                <a class="dropdown-item"> <span><i id="dropdown-category-icon" class="material-icons">{{icon_name}}</i></span>   {{category_name}} </a>
+                                                                        {{/each}}
+                                                                        <div class="dropdown-divider" id="divider"></div>
+                                                                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add Category</button>
+                                                                        
+                                                                        </div>
+                                                                </div>
+                                                
+                                                        </div>
+                                                </td>
+
+                                                <td>
+                                                        <div id="field-container" class="input-group">
+                                                                <span class="input-group-addon"><i class="material-icons">account_balance</i></span>
+                                                        
+                                                                <input id="selected_bank_account" name = "selected_bank_account" type="text" class="form-control" hidden="true">
+
+
+                                                                <div class="btn-group">
+                                                                        <button id="btn-bank-account" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                                        Choose Your bank account
+                                                                        </button>
+                                                                        <div id="bank-dropdown" class="dropdown-menu">
+                                                                                {{#each bank_accounts }}
+                                                                                        <button type="button" value={{ac_number}} class="dropdown-item">{{ac_name}} <br>Ending in {{ac_ending}}</br> </button>
+                                                                                {{/each }}
+                                                                        </div>
+                                                                </div>
                                     
-                                        <input id="selected_category" name = "selected_category" type="text" class="form-control" hidden="true">
+                                                        </div>
+                                                </td>
 
-                                        <div class="btn-group">
-                                                <button id="btn-category"  type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                  Choose Your Category
-                                                </button>
-                                                <div class="dropdown-menu" id = "category">
-                                                  {{#each categories}}
-                                                        <a class="dropdown-item"> <span><i id="dropdown-category-icon" class="material-icons">{{icon_name}}</i></span>   {{category_name}} </a>
-                                                  {{/each}}
-                                                  <div class="dropdown-divider" id="divider"></div>
-                                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add Category</button>
-                                                  
-                                                </div>
-                                        </div>
-                                        {{!-- <div class="btn-group">
-                                                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                  Choose Your Category
-                                                </button>
-                                                <div class="dropdown-menu" id = "category">
-                                                  <a class="dropdown-item" href="#">Travel</a>
-                                                  <a class="dropdown-item" href="#">Groceries</a>
-                                                  <a class="dropdown-item" href="#">Education</a>
-                                                  <div class="dropdown-divider" id="divider"></div>
-                                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add Category</button>
-                                                  
-                                                </div>
-                                        </div> --}}
-                                    
-                                </div>
+                                        </tr>
+                                </table>
+
+                                
 
 
-                                <div id="field-container" class="input-group">
-                                        <span class="input-group-addon"><i class="material-icons">account_balance</i></span>
-                                    
-                                        <input id="selected_bank_account" name = "selected_bank_account" type="text" class="form-control" hidden="true">
-
-                                        {{!-- <div class="btn-group">
-                                                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                  Choose Your bank account
-                                                </button>
-                                                <div class="dropdown-menu">
-                                                  <a class="dropdown-item" href="#">Chase</a>
-                                                  <a class="dropdown-item" href="#">Cash</a>
-                                                  <a class="dropdown-item" href="#">Forex card</a>
-                                                  <div class="dropdown-divider"></div>
-                                                  <a class="dropdown-item" href="#">Add New Account</a>
-                                                </div>
-                                        </div> --}}
-
-                                         <div class="btn-group">
-                                                <button id="btn-bank-account" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                  Choose Your bank account
-                                                </button>
-                                                <div id="bank-dropdown" class="dropdown-menu">
-                                                        {{#each bank_accounts }}
-                                                                <button type="button" value={{ac_number}} class="dropdown-item">{{ac_name}} <br>Ending in {{ac_ending}}</br> </button>
-                                                        {{/each }}
-                                                </div>
-                                        </div>
-                                    
-                                      
-                                </div>
+                                
 
                                <div class="date">
                                         <label id = "label"for="dt" <i class="material-icons">date_range</i></label>
@@ -197,6 +165,21 @@
         <script src = "https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/js/bootstrap-material-design.js" integrity="sha384-3xciOSDAlaXneEmyOo0ME/2grfpqzhhTcM4cE32Ce9+8DW/04AGoTACzQpphYGYe" crossorigin="anonymous"></script>
+        
+        {{!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> --}}
+        <script src = "https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        
+
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+        
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+        <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/css/bootstrap-material-design.min.css" integrity="sha384-R80DC0KVBO4GSTw+wZ5x2zn2pu4POSErBkf8/fSFhPXHxvHJydT0CSgAP2Yo2r4I" crossorigin="anonymous">
+                
+        
         <script>$(document).ready(function() { $('body').bootstrapMaterialDesign()});</script>
         <script src="/public/js/add_category.js"></script>
 
