--- a/public/css/add_expense.css
+++ b/public/css/add_expense.css
@@ -7,6 +7,12 @@
     height: 120px;
 }
 
+#category{
+    overflow-y: auto;
+    width: 100%;
+    height: 250px;
+}
+
 .add-expense-form{
     padding: 36px;
     width: 80%;
