--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,22 +52,23 @@
                         
                       </ul>
             
+
+            
                       <!-- <span class="navbar-text">
                         <i class="material-icons md-light md-36">person</i>
                       </span> -->
 
                       <div class="btn-group pull-xs-right">
-                        <h6 class = "welcome">{{firstname}}</h6>
-                            <button class="btn bmd-btn-icon dropdown-toggle" type="button" id="lr2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              <i class="material-icons md-light md-36">person</i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="lr2">
+                        {{!-- <h6 class = "welcome">{{firstname}}</h6> --}}
+                       <a class="signout" href="#"><i class="material-icons">exit_to_app</i>sign out</a>
+                           
+                            {{!-- <div class="dropdown-menu dropdown-menu-right" aria-labelledby="lr2">
                               <button class="dropdown-item" type="button">View Profile</button>
                               <button class="dropdown-item" type="button">Action 1</button>
                               <button class="dropdown-item disabled" type="button">Disabled action</button>
                               <div class="dropdown-divider"> </div>
                               <a class="dropdown-item" href="#">Sign out</a>
-                            </div>
+                            </div> --}}
                           </div>
 
                     </div>
