--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
                     <div id="my-header-menu" class="collapse navbar-collapse" id="navbarText">
                       <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                          <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="/dashboard">Dashboard <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="/bankac/showAllAccounts">Accounts</a>
@@ -47,8 +47,6 @@
                         <li class="nav-item">
                           <a class="nav-link" href="/expenses/showAllExpenses">Expenses</a>
                         </li>
-                        
-                        
                         
                       </ul>
             
@@ -59,16 +57,8 @@
                       </span> -->
 
                       <div class="btn-group pull-xs-right">
-                        {{!-- <h6 class = "welcome">{{firstname}}</h6> --}}
-                       <a class="signout" href="#"><i class="material-icons">exit_to_app</i>sign out</a>
+                       <a class="sign-out" href="#">SIGN OUT</a>
                            
-                            {{!-- <div class="dropdown-menu dropdown-menu-right" aria-labelledby="lr2">
-                              <button class="dropdown-item" type="button">View Profile</button>
-                              <button class="dropdown-item" type="button">Action 1</button>
-                              <button class="dropdown-item disabled" type="button">Disabled action</button>
-                              <div class="dropdown-divider"> </div>
-                              <a class="dropdown-item" href="#">Sign out</a>
-                            </div> --}}
                           </div>
 
                     </div>
