--- a/views/transactions/all_expenses.handlebars
+++ b/views/transactions/all_expenses.handlebars
@@ -21,7 +21,7 @@
             <a>or</a>
             <a href="/bankac/addBankAC">Click Here To Add Accounts</a>
             <a>or</a>
-            <a href="/income/dashboard">Click Here To Add Accounts</a>
+            <a href="/dashboard">Click Here To Add Accounts</a>
         </div>
         
         <div id="expenses-card" class="card">
