Bug fixex and session added

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -28,7 +28,7 @@
 
     <body>
         {{body}}
-         <div>
+         {{!-- <div>
             <a href="/expenses/addExpense">Click Here To Add Expense</a>
             <a>or</a>
             <a href="/income/addIncome">Click Here To Add Income</a>
@@ -38,7 +38,7 @@
             <a href="/bankac/addBankAC">Click Here To Add Accounts</a>
 
            
-        </div>
+        </div> --}}
     <div class= "all_buttons" align="center">
       <a href="/expenses/addExpense">  <button id="add_expense" class="btn btn-primary btn-raised" >ADD EXPENSE</button></a> 
       <a href="/income/addIncome"> <button id="add_income" class="btn btn-primary btn-raised" > ADD INCOME</button></a>
